# CanvasContracts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  stubs.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
contracts/: README.md
docs/: README.md  canvascontracts.md
docs/api/: README.md
docs/deployment/: README.md
docs/getting-started/: quick-start.md
docs/reference/: cli.md
docs/user-guide/: visual-editor.md
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: placeholder.txt
frontend/src-tauri/src/: main.rs
frontend/src/components/: AiAssistant.tsx  CanvasEditor.tsx  CustomNodeCreator.tsx  Debugger.tsx  Marketplace.tsx  NodePalette.tsx  Toolbar.tsx
frontend/src/services/: tauriService.ts
frontend/src/store/: useCanvasStore.ts
frontend/src/types/: index.ts
src/: config.rs  error.rs  lib.rs  main.rs  types.rs  validator.rs
src/ai/: mod.rs  optimization.rs  pattern_recognition.rs  validator.rs
src/baals/: mod.rs
src/community/: mod.rs
src/compiler/: ast.rs  graph_ir.rs  mod.rs  validator.rs  wasm_gen.rs
src/debugger/: mod.rs
src/deployment/: mod.rs
src/marketplace/: mod.rs
src/monitoring/: mod.rs
src/nodes/: definitions.rs  implementations.rs  mod.rs
src/nodes/custom/: mod.rs
src/optimization/: mod.rs
src/sdk/: mod.rs
src/wasm/: mod.rs
tests/: README.md  advanced_features_tests.rs  ai_tests.rs  ecosystem_tests.rs
